--- a/index.html
+++ b/index.html
@@ -1,59 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>WIZE Language App – Learn Faster, Remember Longer</title>
-  <meta name="description" content="WIZE Language is an educational web app that helps you learn languages quickly and clearly. Paid access after subscription.">
+  <title>WIZE Language – Clear & Fast Learning</title>
+  <meta name="description" content="WIZE Language helps you learn languages clearly and quickly. Full access is available after subscription.">
   <style>
-    :root{
-      --bg:#0f172a;
-      --panel:#111827;
-      --muted:#9ca3af;
-      --text:#e5e7eb;
-      --primary:#38bdf8;
-      --accent:#a78bfa;
-    }
-    body{
-      margin:0;
-      font-family:system-ui, Arial, sans-serif;
-      color:var(--text);
-      background:linear-gradient(180deg, #0b1220 0%, #0f172a 100%);
-    }
-    .container{max-width:980px; margin:0 auto; padding:24px}
-    header{display:flex; align-items:center; justify-content:space-between; padding:16px 0}
-    .brand{display:flex; gap:12px; align-items:center}
-    .logo{
-      width:40px; height:40px; border-radius:10px;
-      background: radial-gradient(120% 120% at 20% 20%, var(--primary), var(--accent));
-    }
-    .brand h1{font-size:20px; margin:0}
+    :root{--bg:#0f172a;--panel:#111827;--muted:#9ca3af;--text:#e5e7eb;--primary:#38bdf8;--accent:#a78bfa}
+    body{margin:0;font-family:system-ui,Arial,sans-serif;color:var(--text);background:linear-gradient(180deg,#0b1220 0%,#0f172a 100%)}
+    .container{max-width:980px;margin:0 auto;padding:24px}
+    header{display:flex;align-items:center;justify-content:space-between;padding:16px 0}
+    .brand{display:flex;gap:12px;align-items:center}
+    .logo{width:40px;height:40px;border-radius:10px;background:radial-gradient(120% 120% at 20% 20%,var(--primary),var(--accent))}
     .muted{color:var(--muted)}
-    .hero{
-      margin-top:12px;
-      padding:32px;
-      background:rgba(17,24,39,.6);
-      border-radius:18px;
-    }
-    .hero h2{font-size:36px; margin:0 0 8px}
-    .hero p{margin:0 0 18px; font-size:18px; color:#cbd5e1}
-    .cta{
-      display:inline-block; padding:12px 18px; border-radius:12px;
-      background:linear-gradient(120deg, var(--primary), var(--accent));
-      color:#0b1220; font-weight:700; text-decoration:none; cursor:pointer;
-    }
-    .grid{display:grid; gap:16px; grid-template-columns:repeat(auto-fit, minmax(240px,1fr)); margin-top:22px}
-    .card{
-      background:rgba(2,6,23,.45);
-      border-radius:16px; padding:18px
-    }
-    .card h3{margin:0 0 6px; font-size:18px}
-    .badge{display:inline-block; font-size:12px; padding:4px 8px; border-radius:999px; background:rgba(56,189,248,.15); color:var(--primary)}
+    .hero{margin-top:12px;padding:32px;background:rgba(17,24,39,.6);border-radius:18px}
+    .hero h2{font-size:36px;margin:0 0 8px}
+    .hero p{margin:0 0 18px;font-size:18px;color:#cbd5e1}
+    .cta{display:inline-block;padding:12px 18px;border-radius:12px;background:linear-gradient(120deg,var(--primary),var(--accent));color:#0b1220;font-weight:700;text-decoration:none;cursor:pointer}
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));margin-top:22px}
+    .card{background:rgba(2,6,23,.45);border-radius:16px;padding:18px}
+    .card h3{margin:0 0 6px;font-size:18px}
+    .badge{display:inline-block;font-size:12px;padding:4px 8px;border-radius:999px;background:rgba(56,189,248,.15);color:var(--primary)}
     .section{margin-top:36px}
     .list{margin:10px 0 0 18px}
-    .price{font-size:32px; font-weight:800; color:var(--primary);}
-    footer{margin-top:40px; padding:18px; text-align:center; color:var(--muted); font-size:13px}
+    .price{font-size:28px;font-weight:800;color:var(--primary)}
+    footer{margin-top:40px;padding:18px;text-align:center;color:var(--muted);font-size:13px}
     a{color:var(--primary)}
+    .links{display:flex;gap:16px;justify-content:center;margin-top:8px}
   </style>
 </head>
 <body>
@@ -68,33 +41,29 @@
 
     <section class="hero">
       <h2>Learn languages <span class="badge">fast &amp; clearly</span></h2>
-      <p>
-        WIZE Language is an educational web app that helps you learn languages quickly and clearly
-        using a simple 4-step method. Full access is available after subscription.
-      </p>
+      <p>This is a public landing page for verification. Full app access is available after subscription.</p>
       <a class="cta" href="#" id="subscribeBtn">Subscribe to get access</a>
-      <p class="muted">This is a public landing page for verification. The full app is behind a paywall.</p>
 
       <div class="grid">
         <div class="card">
-          <h3>Why WIZE?</h3>
+          <h3>Method (3 steps)</h3>
           <ul class="list">
-            <li>4-step method: read → hint → recall → mastery</li>
-            <li>Writing + speaking practice for better memory</li>
-            <li>Clean, family-friendly interface</li>
+            <li>Read → clear example</li>
+            <li>Recall → guided practice</li>
+            <li>Mastery → spaced review</li>
           </ul>
         </div>
         <div class="card">
           <h3>What you get</h3>
           <ul class="list">
-            <li>Full web app access</li>
-            <li>All word groups &amp; alphabet modules</li>
-            <li>Progress tracking and reviews</li>
+            <li>Full access for one language</li>
+            <li>Alphabet modules & word groups</li>
+            <li>Progress tracking &amp; reviews</li>
           </ul>
         </div>
         <div class="card">
           <h3>Support</h3>
-          <p>Email: <a href="mailto:yoel6938262@gmail.com">yoel6938262@gmail.com</a><br/>Phone: +1 347 452 2179</p>
+          <p class="muted">Support is available after subscription via in-app help.</p>
         </div>
       </div>
     </section>
@@ -102,13 +71,17 @@
     <section class="section">
       <h3>Pricing</h3>
       <div class="card">
-        <div class="price">$5 / month</div>
-        <p class="muted">Secure payment via Stripe. Cancel anytime.</p>
+        <div class="price">$40 / 6 months per language</div>
+        <p class="muted">One-time payment for 6 months of access. Secure payment via Stripe.</p>
       </div>
     </section>
 
     <footer>
       © <span id="year"></span> WIZE Language — Educational Web App
+      <div class="links">
+        <a href="#">Terms</a>
+        <a href="#">Privacy</a>
+      </div>
     </footer>
   </div>
 
@@ -116,8 +89,9 @@
     document.getElementById('year').textContent = new Date().getFullYear();
     document.getElementById('subscribeBtn').addEventListener('click', function(e){
       e.preventDefault();
-      // הכנס כאן את הקישור שלך ל-Payment Link של Stripe
-      window.location.href = "https://buy.stripe.com/XXXXXX";
+      // הדבק כאן את ה-Payment Link האמיתי שלך מ-Stripe
+      // window.location.href = "https://buy.stripe.com/XXXXXX";
+      alert("Payment link will be available at launch.");
     });
   </script>
 </body>
