--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     .card h3{margin:0 0 6px;font-size:18px}
     .badge{display:inline-block;font-size:12px;padding:4px 8px;border-radius:999px;background:rgba(56,189,248,.15);color:var(--primary)}
     .section{margin-top:36px}
-    .list{margin:10px 0 0 18px}
     .price{font-size:28px;font-weight:800;color:var(--primary)}
     footer{margin-top:40px;padding:18px;text-align:center;color:var(--muted);font-size:13px}
     a{color:var(--primary)}
@@ -47,15 +46,11 @@
       <div class="grid">
         <div class="card">
           <h3>Method (3 steps)</h3>
-          <ul class="list">
-            <li>Read → clear example</li>
-            <li>Recall → guided practice</li>
-            <li>Mastery → spaced review</li>
-          </ul>
+          <!-- לא מוסבר מה השלבים -->
         </div>
         <div class="card">
           <h3>What you get</h3>
-          <ul class="list">
+          <ul>
             <li>Full access for one language</li>
             <li>Alphabet modules & word groups</li>
             <li>Progress tracking &amp; reviews</li>
