--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="grid">
         <div class="card">
           <h3>Method (3 steps)</h3>
-          <!-- לא מוסבר מה השלבים -->
+          <!-- בלי פירוט של השלבים -->
         </div>
         <div class="card">
           <h3>What you get</h3>
